@@ -4,7 +4,7 @@ pushd "%DIRNAME%.."
 set "RESOLVED_ISPN_HOME=%CD%"
 popd
 
-if "x%ISPN_HOME%" == "x" (
+if "%ISPN_HOME%" == "" (
    set "ISPN_HOME=%RESOLVED_ISPN_HOME%"
 )
 
@@ -12,7 +12,7 @@ pushd "%ISPN_HOME%"
 set "SANITIZED_ISPN_HOME=%CD%"
 popd
 
-if /i "%RESOLVED_ISPN_HOME%" NEQ "%SANITIZED_ISPN_HOME%" (
+if /i "%RESOLVED_ISPN_HOME%" neq "%SANITIZED_ISPN_HOME%" (
    echo.
    echo   WARNING: The ISPN_HOME ^("%SANITIZED_ISPN_HOME%"^) that this script uses points to a different installation than the one that this script resides in ^("%RESOLVED_ISPN_HOME%"^). Unpredictable results may occur.
    echo.
@@ -20,26 +20,37 @@ if /i "%RESOLVED_ISPN_HOME%" NEQ "%SANITIZED_ISPN_HOME%" (
    echo.
 )
 
-if "x%JAVA_HOME%" == "x" (
+if "%ISPN_ROOT_DIR%" == "" (
+   set "ISPN_ROOT_DIR=%ISPN_HOME%\server"
+)
+if "%ISPN_LOG_DIR%" == "" (
+   set "ISPN_LOG_DIR=%ISPN_ROOT_DIR%\log"
+)
+if "%ISPN_CONFIG_DIR%" == "" (
+   set "ISPN_CONFIG_DIR=%ISPN_ROOT_DIR%\conf"
+)
+if "%ISPN_TMP_DIR%" == "" (
+   set "ISPN_TMP_DIR=%ISPN_ROOT_DIR%\tmp"
+)
+
+if "%JAVA_HOME%" == "" (
    set JAVA=java
 ) else (
    set "JAVA=%JAVA_HOME%\bin\java"
 )
 
-FOR /F "tokens=3" %%V IN ('java -version 2^>^&1 ^| findstr /i "version"') DO (
-   SET "VERSION=%%V"
+for /F "tokens=3" %%V in ('java -version 2^>^&1 ^| findstr /i "version"') do (
+   set "VERSION=%%V"
 )
 set "VERSION=%VERSION:"=,%"
-FOR /F "delims=., tokens=1" %%a in ("%VERSION%") do (
+for /F "delims=., tokens=1" %%a in ("%VERSION%") do (
    set "JAVA_VERSION=%%a"
 )
 
-set "JAVA_OPTS="
-
-IF %JAVA_VERSION% GEQ 24 (
+if %JAVA_VERSION% geq 24 (
     set "JAVA_OPTS=--enable-native-access=ALL-UNNAMED %JAVA_OPTS%"
 )
-IF %JAVA_VERSION% GEQ 25 (
+if %JAVA_VERSION% geq 25 (
    set "JAVA_OPTS=-XX:+UseCompactObjectHeaders %JAVA_OPTS%"
 )
 
@@ -70,13 +81,25 @@ shift
 goto ARGS_LOOP_START
 
 :ARGS_LOOP_END
+if exist "%ISPN_LOG_DIR%" (
+   mkdir %ISPN_LOG_DIR%
+)
+set "PREPEND_JAVA_OPTS="
 set "JAVA_OPTS=--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent=ALL-UNNAMED %JAVA_OPTS% %JAVA_OPTS_EXTRA%"
 rem Set debug settings if not already set
 if "%DEBUG_MODE%" == "true" (
    echo "%JAVA_OPTS%" | findstr /I "\-agentlib:jdwp" > nul
   if errorlevel == 1 (
-     set "JAVA_OPTS=%JAVA_OPTS% -agentlib:jdwp=transport=dt_socket,address=%DEBUG_PORT%,server=y,suspend=n"
+     set "PREPEND_JAVA_OPTS=JAVA_OPTS% -agentlib:jdwp=transport=dt_socket,address=%DEBUG_PORT%,server=y,suspend=n"
   ) else (
      echo Debug already enabled in JAVA_OPTS, ignoring --debug argument
   )
 )
+if "%GC_LOG%" == "true" (
+   set "PREPEND_JAVA_OPTS=%PREPEND_JAVA_OPTS% -Xlog:gc*:file=%ISPN_LOG_DIR%\gc.log:time,uptimemillis:filecount=5,filesize=3M"
+)
+if "%HEAP_DUMP%" == "true" (
+   set "PREPEND_JAVA_OPTS=%PREPEND_JAVA_OPTS% -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=%ISPN_LOG_DIR% -XX:ErrorFile=%ISPN_LOG_DIR%\hs_err_pid_%%p.log -XX:ReplayDataFile=%ISPN_LOG_DIR%\replay_pid%%p.log"
+)
+
+set "JAVA_OPTS=%PREPEND_JAVA_OPTS% %JAVA_OPTS%"
